manifests/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gitlab-jenkins
spec:
  rules:
  - host: "gitlab.172.23.0.3.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gitlab
            port:
              number: 80
  - host: "jenkins.172.23.0.3.nip.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins
            port:
              number: 80
